# umc1820-jack-router

./: .dockerignore  .env.example  .gitignore  Dockerfile  MQTT_service.js  Makefile  audio_router_state.backup.json  audio_router_state.json  client.jsx  dead-code.ps1  docker-compose-windows.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker.env.example  fix-missing-directories.ps1  fix-mos.ps1  index.html  jackAudioRouter.jsx  last_state.json  network-fix.ps1  nodemon.json  package-lock.json  package.json  readme.md  server.js  setup-complete-project.ps1  setup-project-structure.ps1  start_jack_audio.sh  troubleshoot-windows-containers.ps1  vite.config.js
components/: connectionMatrix.jsx  loadingScreen.jsx  presetControls.jsx  statusBar.jsx  toast.jsx
config/: environment.js  index.js  mosquitto.conf  ssl.js
constants/: constants.cjs  themeConstants.js
hooks/: useAudioRouter.js
jack-bridge/: CMakeLists.txt  Cpp_Dockerfile  Dockerfile  Dockerfile.windows  app.js  healthcheck.ps1  package.json  startup.ps1
jack-bridge-local/: CMakeLists.txt  build.ps1  find-exe.ps1  jack-bridge.conf
jack-bridge-local/src/: main.cpp
jack-bridge/build-scripts/: build-windows.bat
jack-bridge/config/: config.json
jack-bridge/include/: config_manager.hpp  http_server.hpp  jack_controller.hpp  types.hpp  websocker_server.hpp  windows_jack_client.hpp
jack-bridge/src/: config_manager.cpp  jack_controller.cpp  main-windows.cpp  main.cpp
middleware/: cors.js  errorHandler.js  ssl.js
mosquitto/config/: mosquitto.conf
public/: index.html
routes/: api.js  health.js  index.js  mqtt.js  presets.js
scripts/: deploy.sh  docker-setup.sh
services/: connectionService.js  jackService.js  mqttService.js  stateService.js
setup/: cleanup-project.ps1  install-prerequisites.ps1  setup-hybrid.ps1
src/: jackAudioRouter.jsx
src/components/: messages.jsx  themeControls.jsx
system_services/: jack_audio_startup.bat  setup_windows_startup.bat  start_jack_audio.sh
utils/: jackParser.js  logger.js  network.js
